# ssm-monitor

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude/commands/: release.md
.github/workflows/: release.yml  update-homebrew.yml
src/: main.rs
